--- a/IkiraSushiRoll.html
+++ b/IkiraSushiRoll.html
@@ -6,9 +6,11 @@
     <title>Ikira Sushi Roll</title>
 </head>
 <body>
-    <div class="principal" style="align-items:center;">
+    <div class="principal" >
         <header>
-            <img src="imagenes/iKira_banner.png" alt="Banner" width="70%">
+            <div align="center">
+            <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
+            </div>
         </header>
 
         <nav>
@@ -18,6 +20,17 @@
                 <li> <a href="contacto.html">Contáctanos</a>  </li>
             </ul>
         </nav>
+    
+    <div class="Contenido">
+        <section>
+            <article>
+                <h1>Bienvenidos a ikira Sushi roll</h1>
+                <p> Para nosotros es un privilegio poder ofrecerles un menú amplio, variado, con muchos sabores a escoger. Atrévete a disguartar rollos fusionados con un toque oriental</p>
+            </article>
+        </section>
+
+
+    </div>
 
         <footer>
             <h4>www.IkiraSushiRoll.com</h4>
