--- a/menu.html
+++ b/menu.html
@@ -8,26 +8,45 @@
 </head>
 <body>
     <div class="principal" style="align-items:center;">
-        <header>
-            <img src="imagenes/sushi-clasico.jpg" alt="Banner" width="30%">
-            <p>Ingredientes:Alga nori, arroz, aguacate, zanahoria, queso crema </p>
-        </header>
+            <header>
+                <div align="center">
+                    <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
+                </div>
+            </header>
 
-        <header>
-            <img src="imagenes/sushi-white.jpg" alt="Banner" width="30%">
-            <p>Ingredientes:Alga nori, arroz, aguacate, salmon</p>
-        </header>
+    <div class="Contenido">
+            <section>
+                <article>
+                    <h1>Sushi clasico</h1>
+                    <img src="imagenes/sushi-clasico.jpg" alt="Banner" width="30%" >
+                    <p>Ingredientes:Alga nori, arroz, aguacate, zanahoria, queso crema </p>
+                </article>
 
-        <header>
-            <img src="imagenes/sushi-ikira.jpg" alt="Banner" width="30%">
-            <p>Ingredientes:Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
-        </header>
+                <article>
+                    <h1>Sushi white</h1>
+                    <img src="imagenes/sushi-white.jpg" alt="Banner" width="30%" >
+                    <p>Ingredientes:Alga nori, arroz, aguacate, salmon</p>
 
-        <header>
-            <img src="imagenes/sushi-salmon.jpg" alt="Banner" width="30%">
-            <p>Ingredientes:Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
-        </header>
+                </article>
 
+                <article>
+                    <h1>Sushi white</h1>
+                    <img src="imagenes/sushi-ikira.jpg" alt="Banner" width="30%">
+                    <p>Ingredientes:Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
+
+                </article>
+
+                <article>
+                    <h1>Sushi white</h1>
+                    <img src="imagenes/sushi-salmon.jpg" alt="Banner" width="30%">
+                    <p>Ingredientes:Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
+
+                </article>
+
+            </section>
+
+
+    </div>
     </div>
 </body>
 </html>
