--- a/IkiraSushiRoll.html
+++ b/IkiraSushiRoll.html
@@ -15,6 +15,7 @@
 
         <nav>
             <ul>
+                <h1 align="center"   > INICIO</h1>
                 <li> <a href="nosotros.html">Nosotros</a>  </li>
                 <li> <a href="menu.html">Menú</a>  </li>
                 <li> <a href="contacto.html">Contáctanos</a>  </li>
@@ -24,6 +25,7 @@
     <div class="Contenido">
         <section>
             <article>
+                
                 <h1>Bienvenidos a ikira Sushi roll</h1>
                 <p> Para nosotros es un privilegio poder ofrecerles un menú amplio, variado, con muchos sabores a escoger. Atrévete a disguartar rollos fusionados con un toque oriental</p>
             </article>
