--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
         </header>
 
         <header>
-
+            <h1 align="center"> CONTÁCTANOS</h1>
             <p>¿Tienes preguntas? </p>
             <p>Para Ikira Sushi Roll es muy importante contar con las opiniones, comentarios y sugerencias de nuestros clientes. Los invitamos a que nos escriban cualquier
             sugerencia y observación de nuestros productos</p>
