--- a/menu.html
+++ b/menu.html
@@ -16,30 +16,33 @@
 
     <div class="Contenido">
             <section>
+
+                
                 <article>
+                    <h1 align="center" > MENÚ</h1>
                     <h1>Sushi clasico</h1>
                     <img src="imagenes/sushi-clasico.jpg" alt="Banner" width="30%" >
-                    <p>Ingredientes:Alga nori, arroz, aguacate, zanahoria, queso crema </p>
+                    <p><b>Ingredientes:</b> Alga nori, arroz, aguacate, zanahoria, queso crema </p>
                 </article>
 
                 <article>
                     <h1>Sushi white</h1>
                     <img src="imagenes/sushi-white.jpg" alt="Banner" width="30%" >
-                    <p>Ingredientes:Alga nori, arroz, aguacate, salmon</p>
+                    <p><b>Ingredientes:</b> Alga nori, arroz, aguacate, salmon</p>
 
                 </article>
 
                 <article>
                     <h1>Sushi white</h1>
                     <img src="imagenes/sushi-ikira.jpg" alt="Banner" width="30%">
-                    <p>Ingredientes:Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
+                    <p><b>Ingredientes:</b> Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
 
                 </article>
 
                 <article>
                     <h1>Sushi white</h1>
                     <img src="imagenes/sushi-salmon.jpg" alt="Banner" width="30%">
-                    <p>Ingredientes:Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
+                    <p><b>Ingredientes:</b> Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
 
                 </article>
 
