--- a/nosotros.html
+++ b/nosotros.html
@@ -17,6 +17,7 @@
         <section>
 
             <article>
+                <h1 align="center"   > QUIENES SOMOS</h1>
                 <h1>¿Quienes somos? </h1>
                 <p>Somos una empresa comprometidos con la innovación y calidad, ofrecemos productos originales y nutritivos con un toque japonés que nos identifica en cada uno de nuestras recetas
                     .Nuestro proyecto fue creado debido a la necesidad de satisfacer una gastronomia diferente. </p>
