--- a/franquicias.html
+++ b/franquicias.html
@@ -81,7 +81,7 @@
             </article>
 
             <article>
-                <h1>Puntos Clave Etapa 5</h1>
+                <h1>Puntos Clave Etapa 5 prueba 2</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque molestiae culpa quia aut mollitia totam accusantium odit facilis quod itaque deserunt dicta quo odio, blanditiis voluptate animi et quis tenetur.</p>
             </article>
         </section>
