--- a/IkiraSushiRoll.html
+++ b/IkiraSushiRoll.html
@@ -19,6 +19,7 @@
                 <li> <a href="nosotros.html">Nosotros</a>  </li>
                 <li> <a href="menu.html">Menú</a>  </li>
                 <li> <a href="contacto.html">Contáctanos</a>  </li>
+                <li> <a href="franquicias.html">Franquicias</a>  </li>
             </ul>
         </nav>
     
