--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,7 @@
             <br>
             <label for="exampleInputmensaje" class="form-label">Sugerencia y observaciones (requerido)</label>
             <br>
-            <input type="email" class="form-control" id="exampleInputmensaje" aria-describedby="emailHelp">
+            <input type="mensaje" class="form-control" id="exampleInputmensaje" aria-describedby="emailHelp">
             <br>
             <button type="submit" class="btn btn-primary">Enviar</button>
             <br>
