--- a/franquicias.html
+++ b/franquicias.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FRANQUICIAS IKIRA SUHI ROLL</title>
+    <title>CONVIERTETE EN IKIRA MASTER</title>
     
 </head>
 
@@ -93,4 +93,9 @@
 
 
 </body>
+
+<footer>
+
+    Contacto
+</footer>
 </html>
