--- a/IkiraSushiRoll.html
+++ b/IkiraSushiRoll.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="imagenes\sushi.png">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="js/bootstrap.min.js">
     <title>Ikira Sushi Roll</title>
 </head>
 <body>
