--- a/contacto.html
+++ b/contacto.html
@@ -20,20 +20,30 @@
             <p>Para Ikira Sushi Roll es muy importante contar con las opiniones, comentarios y sugerencias de nuestros clientes. Los invitamos a que nos escriban cualquier
             sugerencia y observación de nuestros productos</p>
 
-            <label for="exampleInputnombre" class="form-label">Nombre (requerido)</label>
+           
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Nombre (requerido)</label>
+                <br>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese su nombre completo">
+            </div>
+
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email address (requerido)</label>
+                <br>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+
+
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Sugerencia y observaciones</label>
+                <br>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+
+            <div class="mb-3">
+                <button type="submit" class="btn btn-primary">Enviar</button>
             <br>
-            <input type="nombre" class="form-control" id="exampleInputnombre" aria-describedby="emailHelp">
-            <br>
-            <label for="exampleInputEmail1" class="form-label">Email (requerido)</label>
-            <br>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <br>
-            <label for="exampleInputmensaje" class="form-label">Sugerencia y observaciones (requerido)</label>
-            <br>
-            <input type="mensaje" class="form-control" id="exampleInputmensaje" aria-describedby="emailHelp">
-            <br>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-            <br>
+            </div>
 
         </header>
 
