--- a/franquicias.html
+++ b/franquicias.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CONVIERTETE EN IKIRA MASTER</title>
     
+    <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </head>
 
 <body>
