--- a/menuEntradas.html
+++ b/menuEntradas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+
     <link rel="icon" href="imagenes\sushi.png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="js/bootstrap.bundle.min.js"></script>
@@ -30,50 +30,50 @@
     <div class="container-fluid" >
         <div class="row row-cols-2">
           <div class="col">
-            <h1>Sushi clasico</h1>
+            <h1>Camarones</h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-clasico.jpg" width="100%">
+                    <img src="imagenes/camarones.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, zanahoria, queso crema </p>
+                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> camarones bañados en salsa de la casa, aguacate, tomate </p>
                 </div>
             </div>
           </div>
 
           <div class="col">
-            <h1>Sushi white</h1>
+            <h1>Ramen</h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-white.jpg" width="80%">
+                    <img src="imagenes/ramen.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, salmon </p>
+                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Caldo al estilo oriental, huevo, orellanas, cebollín, champiñones, cerdo, pollo y res</p>
                 </div>
             </div>
           </div>
 
 
           <div class="col">
-            <h1>Sushi iKira</h1>
+            <h1>Pulpo iKira</h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-ikira.jpg" width="100%">
+                    <img src="imagenes/pulpo.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
+                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> pulpo con salsa teriyaki</p>
                 </div>
             </div>
           </div>
 
           <div class="col">
-            <h1>Sushi salmon</h1>
+            <h1>Ensalada de la casa</h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-salmon.jpg" width="80%">
+                    <img src="imagenes/ensalada.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
+                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> aguacate, tomate, cebolla, lechuga, especies </p>
                 </div>
             </div>
           </div>
