--- a/contacto.html
+++ b/contacto.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="imagenes\sushi.png">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/miEstilo.css">
     <title>Contáctanos</title>
 </head>
 <body>
     <div class="principal" style="align-items:center;">
-
 
         <header>
             <div align="center">
@@ -14,38 +17,50 @@
             </div>
         </header>
 
-        <header>
-            <h1 align="center"> CONTÁCTANOS</h1>
-            <p>¿Tienes preguntas? </p>
-            <p>Para Ikira Sushi Roll es muy importante contar con las opiniones, comentarios y sugerencias de nuestros clientes. Los invitamos a que nos escriban cualquier
-            sugerencia y observación de nuestros productos</p>
+        <!-- barra principal-->
+        <nav class="navbar navbar-light bg-light" id="barra2">
+            <div class="container-fluid">
+            <p class="navbar-brand mb-0 h1" id="ttitulo"> CONTÁCTANOS</p>
+            </div>
+        </nav>
 
-           
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Nombre (requerido)</label>
+            <header>
+                <h2>¿Tienes preguntas? </h2>
+                <p>Para Ikira Sushi Roll es muy importante contar con las opiniones, comentarios y sugerencias de nuestros clientes. Los invitamos a que nos escriban cualquier
+                sugerencia y observación de nuestros productos</p>
+
+            <form action="franquicias2.html">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nombre (requerido)</label>
+                    <br>
+                    <input type="text" placeholder="Nombre Completo" required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address (requerido)</label>
+                    <br>
+                    <input type="text" placeholder="name@example.com" required >
+                </div>
+
+
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Sugerencia y observaciones</label>
+                    <br>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Enviar</button>
                 <br>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese su nombre completo">
-            </div>
+                </div>
 
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email address (requerido)</label>
-                <br>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>
+            </form>
 
+            </header>
 
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Sugerencia y observaciones</label>
-                <br>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-
-            <div class="mb-3">
-                <button type="submit" class="btn btn-primary">Enviar</button>
-            <br>
-            </div>
-
-        </header>
+            <footer>
+                contactos@ikiraroll.com.co 2021 <a href="IkiraSushiRoll.html" target="_blank"></a>
+            </footer>
 
     </div>
 </body>
