--- a/franquicias2.html
+++ b/franquicias2.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="icons/sushi.svg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="css/miEstilo.css">
     <style>
         @import url("https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap");
   
@@ -59,9 +60,9 @@
     </head>
 
     <body>
-        <img src="imagenes/iKira_banner.png" alt="Banner" width="40%">
+        <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
         <div class="flex-container">
-            
+
           <div class="message-container">
             <h1>Gracias!</h1>
             <p>Revisaremos su solicitud y nos pondremos en contacto.</p>
