--- a/menuBebidas.html
+++ b/menuBebidas.html
@@ -30,50 +30,50 @@
     <div class="container-fluid" >
         <div class="row row-cols-2">
           <div class="col">
-            <h1>Sushi clasico</h1>
+            <h1>Sake</h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-clasico.jpg" width="100%">
+                    <img src="imagenes/sake.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, zanahoria, queso crema </p>
+                    <p style="text-align: center; font-size: 18px;";"></p>
                 </div>
             </div>
           </div>
 
           <div class="col">
-            <h1>Sushi white</h1>
+            <h1>Té </h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-white.jpg" width="80%">
+                    <img src="imagenes/tea.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, salmon </p>
+                    <p style="text-align: center; font-size: 18px;";"> </p>
                 </div>
             </div>
           </div>
 
 
           <div class="col">
-            <h1>Sushi iKira</h1>
+            <h1>Cerveza</h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-ikira.jpg" width="100%">
+                    <img src="imagenes/cerveza.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
+                    <p style="text-align: center; font-size: 18px;";"></p>
                 </div>
             </div>
           </div>
 
           <div class="col">
-            <h1>Sushi salmon</h1>
+            <h1>Botella de agua</h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-salmon.jpg" width="80%">
+                    <img src="imagenes/agua (2).jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
+                    <p style="text-align: center; font-size: 18px;";"> </p>
                 </div>
             </div>
           </div>
