--- a/nosotros.html
+++ b/nosotros.html
@@ -4,52 +4,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="imagenes\sushi.png">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/miEstilo.css">
     <title>nosotros</title>
 </head>
 <body>
 
     <div class="principal" style="align-items:center;">
         <header>
-            <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
+            <div align="center">
+                <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400" >
+            </div>
         </header>
 
-    <div class="Contenido">
-        <section>
+    <!-- barra principal-->
+        <nav class="navbar navbar-light bg-light" id="barra2">
+            <div class="container-fluid">
+            <p class="navbar-brand mb-0 h1" id="ttitulo"> NOSOTROS</p>
+            </div>
+        </nav>
 
-            <article>
-                <h1 align="center"   > QUIENES SOMOS</h1>
-                <h1>¿Quienes somos? </h1>
-                <p>Somos una empresa comprometidos con la innovación y calidad, ofrecemos productos originales y nutritivos con un toque japonés que nos identifica en cada uno de nuestras recetas
-                    .Nuestro proyecto fue creado debido a la necesidad de satisfacer una gastronomia diferente. </p>
-            </article>
+        <!-- division de columnas-->
+        <div class="container-fluid" >
 
 
-            <article>
-                <h1>Misión</h1>
-                <p>Satisfacer las necesidades gastronómicas de todos nuestros clientes ofreciendo diferentes alternativas de comida asiática. </p>
-            </article>
+            <h1>¿Quienes somos?</h1>
+            <div class="row row-cols-2">
+                <div class="col">
+                    <img src="imagenes/chef.jpg" width="100%">
+                </div>
+                <div class="col align-middle">
+                    <p style="text-align: center; font-size: 18px;">Somos una empresa comprometidos con la innovación y calidad, ofrecemos productos originales y nutritivos con un toque japonés que nos identifica en cada uno de nuestras recetas
+                        .Nuestro proyecto fue creado debido a la necesidad de satisfacer una gastronomia diferente. </p>
+                </div>
+            </div>
 
-        
-            <article>
-                <h1>Visión</h1>
-                <p>Ser el restaurante más reconocido de Bucaramanga  en el 2025, por brindar un menú agradable acompañados de las mejores experiencias gastronómicas memorables.
-                </p>
-            </article>
+            <div class="row row-cols-2">
+                <div class="col">
+                    <h1>Misión</h1>
+                    <div class="row row-cols-2">
+                        <div class="col">
+                            <img src="imagenes/mision.jpg" width="100%">
+                        </div>
+                        <div class="col">
+                            <p style="text-align: center; font-size: 18px;">Satisfacer las necesidades gastronómicas de todos nuestros clientes ofreciendo diferentes alternativas de comida asiática.</p>
+                        </div>
+                    </div>
+                </div>
 
-            <article>
+
+                <div class="col">
+                    <h1>Visión</h1>
+                    <div class="row row-cols-2">
+                        <div class="col">
+                            <img src="imagenes/vision.jpg" width="100%">
+                        </div>
+                        <div class="col">
+                            <p style="text-align: center; font-size: 18px;">Ser el restaurante más reconocido de Bucaramanga  en el 2025, por brindar un menú agradable acompañados de las mejores experiencias gastronómicas memorables.</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+
                 <h1>Nuestros valores</h1>
-                <p><b>Calidad:</b> cuidando cada proceso de preparación logrando la excelencia del producto. </p>
-                <p><b>Compromiso:</b> cumplir con las expectativas de nuestros clientes. </p>
-                <p><b>Innovación:</b> buscamos la continuidad de nuevas ideas.</p>
+                <div class="row row-cols-2">
+                    <div class="col">
+                        <img src="imagenes/valores.png" width="80%">
+                    </div>
+                    <div class="col align-middle">
+                        <p style="text-align: center; font-size: 18px;"> </p>
+                        <p><b>Calidad:</b> cuidando cada proceso de preparación logrando la excelencia del producto. </p>
+                        <p><b>Compromiso:</b> cumplir con las expectativas de nuestros clientes. </p>
+                        <p><b>Innovación:</b> buscamos la continuidad de nuevas ideas.</p>
+
+                    </div>
+                </div>
 
 
-            </article>
 
+   
+        </div>
 
-        </section>
-
-
-    </div>
+        <footer>
+            contactos@ikiraroll.com.co 2021 <a href="IkiraSushiRoll.html" target="_blank"></a>
+        </footer>
     </div>
 </body>
 </html>
+
