--- a/menuBebidas.html
+++ b/menuBebidas.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <div class="principal" style="align-items:center;">
+    <div class="container" style="align-items:center;">
             <header>
                 <div align="center">
                     <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
@@ -22,7 +22,7 @@
     <!-- barra principal-->
     <nav class="navbar navbar-light bg-light" id="barra2">
         <div class="container-fluid">
-        <p class="navbar-brand mb-0 h1" id="ttitulo"> Rollos</p>
+        <p class="navbar-brand mb-0 h1" id="ttitulo"> Bebidas</p>
         </div>
     </nav>
 
@@ -36,7 +36,7 @@
                     <img src="imagenes/sake.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"></p>
+                    <p style="text-align: center; font-size: 20px;";"></p>
                 </div>
             </div>
           </div>
@@ -45,10 +45,10 @@
             <h1>Té </h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/tea.jpg" width="100%">
+                    <img src="imagenes/tee.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"> </p>
+                    <p style="text-align: center; font-size: 20px;";"> </p>
                 </div>
             </div>
           </div>
@@ -61,7 +61,7 @@
                     <img src="imagenes/cerveza.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"></p>
+                    <p style="text-align: center; font-size: 20px;";"></p>
                 </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
                     <img src="imagenes/agua (2).jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"> </p>
+                    <p style="text-align: center; font-size: 20px;";"> </p>
                 </div>
             </div>
           </div>
