--- a/IkiraSushiRoll.html
+++ b/IkiraSushiRoll.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="imagenes\sushi.png">
-    <link rel="stylesheet" href="css/miEstilo.css">
-    <!--<link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="js/bootstrap.bundle.min.js">-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/miEstilo.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Ikira Sushi Roll</title>
 </head>
 <body>
-    <div class="principal" >
+    <div class="container" style="align-items:center;" >
         <header>
             <div align="center">
             <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
@@ -74,7 +72,7 @@
             <article>
 
                 <h1>Bienvenidos a iKira Sushi roll </h1>
-                <p> Para nosotros es un privilegio poder ofrecerles un menú amplio, variado, con muchos sabores a escoger. Atrévete a degustar nuestros rollos fusionados con un toque oriental</p>
+                <p style="text-align: justify; font-size: 20px;"> Para nosotros es un privilegio poder ofrecerles un menú amplio, variado, con muchos sabores a escoger. Atrévete a degustar nuestros rollos fusionados con un toque oriental</p>
             </article>
         </section>
 
