--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <title>Contáctanos</title>
 </head>
 <body>
-    <div class="principal" style="align-items:center;">
+    <div class="container" style="align-items:center;">
 
         <header>
             <div align="center">
@@ -24,11 +24,31 @@
             </div>
         </nav>
 
-            <header>
-                <h2>¿Tienes preguntas? </h2>
-                <p>Para Ikira Sushi Roll es muy importante contar con las opiniones, comentarios y sugerencias de nuestros clientes. Los invitamos a que nos escriban cualquier
-                sugerencia y observación de nuestros productos</p>
 
+        <!-- division de columnas-->
+        <div class="container-fluid" >
+            <div class="row row-cols-2">
+            <div class="col">
+                <h1>¿Tienes preguntas?</h1>
+                <div class="row row-cols-2">
+                    <div class="col">
+                        <img src="imagenes/preguntas.png" width="100%">
+                    </div>
+                
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row row-cols-2">
+                    <div class="col">
+                        <p style="text-align: left ; font-size: 24px;">Para Ikira Sushi Roll es muy importante contar con las opiniones, comentarios y sugerencias de nuestros clientes. Los invitamos a que nos escriban cualquier
+                            sugerencia y observación de nuestros productos</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+        
             <form action="franquicias2.html">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Nombre (requerido)</label>
@@ -56,7 +76,6 @@
 
             </form>
 
-            </header>
 
             <footer>
                 contactos@ikiraroll.com.co 2021 <a href="IkiraSushiRoll.html" target="_blank"></a>
