--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <div class="principal" style="align-items:center;">
+    <div class="container" style="align-items:center;">
             <header>
                 <div align="center">
                     <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
@@ -36,7 +36,7 @@
                     <img src="imagenes/sushi-clasico.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, zanahoria, queso crema </p>
+                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, zanahoria, queso crema </p>
                 </div>
             </div>
           </div>
@@ -48,7 +48,7 @@
                     <img src="imagenes/sushi-white.jpg" width="80%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, salmon </p>
+                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, salmon </p>
                 </div>
             </div>
           </div>
@@ -61,7 +61,7 @@
                     <img src="imagenes/sushi-ikira.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
+                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
                 </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
                     <img src="imagenes/sushi-salmon.jpg" width="80%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
+                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
                 </div>
             </div>
           </div>
