--- a/menuEntradas.html
+++ b/menuEntradas.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <div class="principal" style="align-items:center;">
+    <div class="container" style="align-items:center;">
             <header>
                 <div align="center">
                     <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
@@ -22,7 +22,7 @@
     <!-- barra principal-->
     <nav class="navbar navbar-light bg-light" id="barra2">
         <div class="container-fluid">
-        <p class="navbar-brand mb-0 h1" id="ttitulo"> Rollos</p>
+        <p class="navbar-brand mb-0 h1" id="ttitulo"> Entradas</p>
         </div>
     </nav>
 
@@ -36,7 +36,7 @@
                     <img src="imagenes/camarones.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> camarones bañados en salsa de la casa, aguacate, tomate </p>
+                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> camarones bañados en salsa de la casa, aguacate, tomate </p>
                 </div>
             </div>
           </div>
@@ -48,7 +48,7 @@
                     <img src="imagenes/ramen.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> Caldo al estilo oriental, huevo, orellanas, cebollín, champiñones, cerdo, pollo y res</p>
+                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Caldo al estilo oriental, huevo, orellanas, cebollín, champiñones, cerdo, pollo y res</p>
                 </div>
             </div>
           </div>
@@ -61,7 +61,7 @@
                     <img src="imagenes/pulpo.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> pulpo con salsa teriyaki</p>
+                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> pulpo con salsa teriyaki</p>
                 </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
                     <img src="imagenes/ensalada.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 18px;";"><b>Ingredientes:</b> aguacate, tomate, cebolla, lechuga, especies </p>
+                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> aguacate, tomate, cebolla, lechuga, especies </p>
                 </div>
             </div>
           </div>
