--- a/nosotros.html
+++ b/nosotros.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="principal" style="align-items:center;">
+    <div class="container" style="align-items:center;">
         <header>
             <div align="center">
                 <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400" >
@@ -36,7 +36,7 @@
                     <img src="imagenes/chef.jpg" width="100%">
                 </div>
                 <div class="col align-middle">
-                    <p style="text-align: center; font-size: 18px;">Somos una empresa comprometidos con la innovación y calidad, ofrecemos productos originales y nutritivos con un toque japonés que nos identifica en cada uno de nuestras recetas
+                    <p style="text-align: center; font-size: 24px;">Somos una empresa comprometidos con la innovación y calidad, ofrecemos productos originales y nutritivos con un toque japonés que nos identifica en cada uno de nuestras recetas
                         .Nuestro proyecto fue creado debido a la necesidad de satisfacer una gastronomia diferente. </p>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                             <img src="imagenes/mision.jpg" width="100%">
                         </div>
                         <div class="col">
-                            <p style="text-align: center; font-size: 18px;">Satisfacer las necesidades gastronómicas de todos nuestros clientes ofreciendo diferentes alternativas de comida asiática.</p>
+                            <p style="text-align: center; font-size: 20px;">Satisfacer las necesidades gastronómicas de todos nuestros clientes ofreciendo diferentes alternativas de comida asiática.</p>
                         </div>
                     </div>
                 </div>
@@ -59,10 +59,10 @@
                     <h1>Visión</h1>
                     <div class="row row-cols-2">
                         <div class="col">
-                            <img src="imagenes/vision.jpg" width="100%">
+                            <img src="imagenes/vision.jpg" width="105%">
                         </div>
                         <div class="col">
-                            <p style="text-align: center; font-size: 18px;">Ser el restaurante más reconocido de Bucaramanga  en el 2025, por brindar un menú agradable acompañados de las mejores experiencias gastronómicas memorables.</p>
+                            <p style="text-align: center; font-size: 20px;">Ser el restaurante más reconocido de Bucaramanga  en el 2025, por brindar un menú agradable acompañados de las mejores experiencias gastronómicas memorables.</p>
                         </div>
                     </div>
                 </div>
@@ -74,17 +74,13 @@
                         <img src="imagenes/valores.png" width="80%">
                     </div>
                     <div class="col align-middle">
-                        <p style="text-align: center; font-size: 18px;"> </p>
-                        <p><b>Calidad:</b> cuidando cada proceso de preparación logrando la excelencia del producto. </p>
-                        <p><b>Compromiso:</b> cumplir con las expectativas de nuestros clientes. </p>
-                        <p><b>Innovación:</b> buscamos la continuidad de nuevas ideas.</p>
+                        <p style="text-align: center; font-size: 20px;"><b>Calidad:</b> cuidando cada proceso de preparación logrando la excelencia del producto. </p>
+                        <p style="text-align: center; font-size: 20px;"><b>Compromiso:</b> cumplir con las expectativas de nuestros clientes. </p>
+                        <p style="text-align: center; font-size: 20px;"><b>Innovación:</b> buscamos la continuidad de nuevas ideas.</p>
 
                     </div>
                 </div>
 
-
-
-   
         </div>
 
         <footer>
