--- a/contacto.html
+++ b/contacto.html
@@ -13,14 +13,27 @@
 
         <header>
             <div align="center">
-                <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400" >
+                <img src="imagenes/iKira_banner.png" alt="Banner" width="100%" height="400" >
             </div>
         </header>
 
         <!-- barra principal-->
-        <nav class="navbar navbar-light bg-light" id="barra2">
+        <nav class="container navbar navbar-expand-lg navbar-light bg-light" id="barra2">
             <div class="container-fluid">
-            <p class="navbar-brand mb-0 h1" id="ttitulo"> CONTÁCTANOS</p>
+                <!--icono del logo-->
+                <a class="navbar-brand" href="IkiraSushiRoll.html">
+                    <b>iKira Sushi roll</b>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"><b>CONTÁCTANOS</b></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
@@ -34,14 +47,14 @@
                     <div class="col">
                         <img src="imagenes/preguntas.png" width="100%">
                     </div>
-                
+
                 </div>
             </div>
 
             <div class="col">
                 <div class="row row-cols-2">
                     <div class="col">
-                        <p style="text-align: left ; font-size: 24px;">Para Ikira Sushi Roll es muy importante contar con las opiniones, comentarios y sugerencias de nuestros clientes. Los invitamos a que nos escriban cualquier
+                        <p style="text-align: justify; font-size: 24px;">Para Ikira Sushi Roll es muy importante contar con las opiniones, comentarios y sugerencias de nuestros clientes. Los invitamos a que nos escriban cualquier
                             sugerencia y observación de nuestros productos</p>
                     </div>
                 </div>
