--- a/menu.html
+++ b/menu.html
@@ -13,16 +13,29 @@
 </head>
 <body>
     <div class="container" style="align-items:center;">
-            <header>
+            <header class="container">
                 <div align="center">
-                    <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
+                    <img src="imagenes/iKira_banner.png" alt="Banner" width="100%" height="400">
                 </div>
             </header>
 
     <!-- barra principal-->
-    <nav class="navbar navbar-light bg-light" id="barra2">
+    <nav class="container navbar navbar-expand-lg navbar-light bg-light" id="barra2">
         <div class="container-fluid">
-        <p class="navbar-brand mb-0 h1" id="ttitulo"> Rollos</p>
+            <!--icono del logo-->
+            <a class="navbar-brand" href="IkiraSushiRoll.html">
+                <b>iKira Sushi roll</b>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"><b>ROLLOS</b></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -36,7 +49,8 @@
                     <img src="imagenes/sushi-clasico.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, zanahoria, queso crema </p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$25,000</br></b><b>Ingredientes:</b> Alga nori, arroz, aguacate, zanahoria, queso crema </p>
+                    <p>
                 </div>
             </div>
           </div>
@@ -48,7 +62,7 @@
                     <img src="imagenes/sushi-white.jpg" width="80%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate, salmon </p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$28,000</br></b><b>Ingredientes:</b> Alga nori, arroz, aguacate, salmon </p>
                 </div>
             </div>
           </div>
@@ -61,7 +75,7 @@
                     <img src="imagenes/sushi-ikira.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$30,000</br></b><b>Ingredientes:</b> Alga nori, arroz, aguacate y anjonjoli, palmito de cangrejo, bañados en salsa teriyaki</p>
                 </div>
             </div>
           </div>
@@ -70,10 +84,10 @@
             <h1>Sushi salmon</h1>
             <div class="row row-cols-2">
                 <div class="col">
-                    <img src="imagenes/sushi-salmon.jpg" width="80%">
+                    <img src="imagenes/sushi-salmon.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$29,000</br></b><b>Ingredientes:</b> Alga nori, Arroz, langostinos tempura, kanikama, envueltos en salmón asado a la parrilla y aguacate </p>
                 </div>
             </div>
           </div>
