--- a/IkiraSushiRoll.html
+++ b/IkiraSushiRoll.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <link rel="icon" href="imagenes\sushi.png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/miEstilo.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Ikira Sushi Roll</title>
 </head>
 <body>
     <div class="container" style="align-items:center;" >
-        <header>
+        <header class="container">
             <div align="center">
-            <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
+            <img src="imagenes/iKira_banner.png" alt="Banner" width="100%" height="400">
             </div>
         </header>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light " id="barra1">
-            <div class="container-fluid">
+            <div class="container">
 
                 <!--icono del logo-->
                 <a class="navbar-brand" href="#"> <b>iKira Sushi roll</b></a>
@@ -65,9 +64,9 @@
                 </form>
                 </div>
             </div>
-            </nav>
+        </nav>
 
-    <div class="contenido">
+    <div class="container contenido">
         <section>
             <article>
 
@@ -79,10 +78,51 @@
 
     </div>
 
+    <div id="carouselExample" class="container carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="6" aria-label="Slide 7"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="imagenes/portada6.jpg" class="d-block w-100" alt="Portada">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/portada5.jpg" class="d-block w-100" alt="Portadabarco">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/portada4.jpg" class="d-block w-100" alt="Portadad">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/portada3.jpg" class="d-block w-100" alt="Portadasus">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/portada2.jpg" class="d-block w-100" alt="Portadasuha">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/portada1.jpg" class="d-block w-100" alt="Portadasdfg">
+            </div>
+
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
     <footer>
         contactos@ikiraroll.com.co 2021 <a href="IkiraSushiRoll.html" target="_blank"></a>
     </footer>
 
-    </div>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
