--- a/menuBebidas.html
+++ b/menuBebidas.html
@@ -15,14 +15,27 @@
     <div class="container" style="align-items:center;">
             <header>
                 <div align="center">
-                    <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
+                    <img src="imagenes/iKira_banner.png" alt="Banner" width="100%" height="400">
                 </div>
             </header>
 
     <!-- barra principal-->
-    <nav class="navbar navbar-light bg-light" id="barra2">
+    <nav class="container navbar navbar-expand-lg navbar-light bg-light" id="barra2">
         <div class="container-fluid">
-        <p class="navbar-brand mb-0 h1" id="ttitulo"> Bebidas</p>
+            <!--icono del logo-->
+            <a class="navbar-brand" href="IkiraSushiRoll.html">
+                <b>iKira Sushi roll</b>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"><b>BEBIDAS</b></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -36,7 +49,7 @@
                     <img src="imagenes/sake.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"></p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$8,000</br></b></p>
                 </div>
             </div>
           </div>
@@ -48,7 +61,7 @@
                     <img src="imagenes/tee.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"> </p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$4,000</br></b> </p>
                 </div>
             </div>
           </div>
@@ -61,7 +74,7 @@
                     <img src="imagenes/cerveza.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"></p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$7,000</br></b></p>
                 </div>
             </div>
           </div>
@@ -73,7 +86,7 @@
                     <img src="imagenes/agua (2).jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"> </p>
+                    <p style="text-align: center; font-size: 20px;";"> <br><b>$3,000</br></b></p>
                 </div>
             </div>
           </div>
