--- a/menuEntradas.html
+++ b/menuEntradas.html
@@ -5,7 +5,6 @@
 
     <link rel="icon" href="imagenes\sushi.png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/miEstilo.css">
     <title>Menú</title>
 
@@ -13,21 +12,35 @@
 </head>
 <body>
     <div class="container" style="align-items:center;">
-            <header>
-                <div align="center">
-                    <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400">
-                </div>
-            </header>
+        <header >
+            <div align="center">
+                <img src="imagenes/iKira_banner.png" alt="Banner" width="100%" height="400">
+            </div>
+        </header>
 
     <!-- barra principal-->
-    <nav class="navbar navbar-light bg-light" id="barra2">
-        <div class="container-fluid">
-        <p class="navbar-brand mb-0 h1" id="ttitulo"> Entradas</p>
-        </div>
-    </nav>
+
+    <nav class="container navbar navbar-expand-lg navbar-light bg-light" id="barra2">
+            <div class="container-fluid">
+                <!--icono del logo-->
+                <a class="navbar-brand" href="IkiraSushiRoll.html">
+                    <b>iKira Sushi roll</b>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"><b>ENTRADAS</b></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
     <!-- division de columnas-->
-    <div class="container-fluid" >
+    <div class="container" >
         <div class="row row-cols-2">
           <div class="col">
             <h1>Camarones</h1>
@@ -36,7 +49,7 @@
                     <img src="imagenes/camarones.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> camarones bañados en salsa de la casa, aguacate, tomate </p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$15,000</br></b><b>Ingredientes:</b> camarones bañados en salsa de la casa, aguacate, tomate </p>
                 </div>
             </div>
           </div>
@@ -48,7 +61,7 @@
                     <img src="imagenes/ramen.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> Caldo al estilo oriental, huevo, orellanas, cebollín, champiñones, cerdo, pollo y res</p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$20,000</br></b><b>Ingredientes:</b> Caldo al estilo oriental, huevo, orellanas, cebollín, champiñones, cerdo, pollo y res</p>
                 </div>
             </div>
           </div>
@@ -61,7 +74,7 @@
                     <img src="imagenes/pulpo.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> pulpo con salsa teriyaki</p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$18,000</br></b><b>Ingredientes:</b> pulpo con salsa teriyaki</p>
                 </div>
             </div>
           </div>
@@ -73,26 +86,17 @@
                     <img src="imagenes/ensalada.jpg" width="100%">
                 </div>
                 <div class="col">
-                    <p style="text-align: center; font-size: 20px;";"><b>Ingredientes:</b> aguacate, tomate, cebolla, lechuga, especies </p>
+                    <p style="text-align: center; font-size: 20px;";"><br><b>$13,000</br></b><b>Ingredientes:</b> aguacate, tomate, cebolla, lechuga, especies </p>
                 </div>
             </div>
           </div>
         </div>
     </div>
 
-
-
-
-    <div class="Contenido">
-            <section>
-
-
-            </section>
-    </div>
-
     <footer>
         contactos@ikiraroll.com.co 2021 <a href="IkiraSushiRoll.html" target="_blank"></a>
     </footer>
-    </div>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
