--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="imagenes\sushi.png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/bootstrap.bundle.min.js"></script>
+    
     <link rel="stylesheet" href="css/miEstilo.css">
     <title>nosotros</title>
 </head>
@@ -15,78 +15,91 @@
     <div class="container" style="align-items:center;">
         <header>
             <div align="center">
-                <img src="imagenes/iKira_banner.png" alt="Banner" width="95%" height="400" >
+                <img src="imagenes/iKira_banner.png" alt="Banner" width="100%" height="400" >
             </div>
         </header>
 
-    <!-- barra principal-->
-        <nav class="navbar navbar-light bg-light" id="barra2">
+        <!-- barra principal-->
+        <nav class="container navbar navbar-expand-lg navbar-light bg-light" id="barra2">
             <div class="container-fluid">
-            <p class="navbar-brand mb-0 h1" id="ttitulo"> NOSOTROS</p>
+                <!--icono del logo-->
+                <a class="navbar-brand" href="IkiraSushiRoll.html">
+                    <b>iKira Sushi roll</b>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page">NOSOTROS</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
-
-        <!-- division de columnas-->
-        <div class="container-fluid" >
-
-
-            <h1>¿Quienes somos?</h1>
-            <div class="row row-cols-2">
-                <div class="col">
-                    <img src="imagenes/chef.jpg" width="100%">
+        <div class="card mb-3" >
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="imagenes/chef.jpg" class="img-fluid rounded-start" >
                 </div>
-                <div class="col align-middle">
-                    <p style="text-align: center; font-size: 24px;">Somos una empresa comprometidos con la innovación y calidad, ofrecemos productos originales y nutritivos con un toque japonés que nos identifica en cada uno de nuestras recetas
-                        .Nuestro proyecto fue creado debido a la necesidad de satisfacer una gastronomia diferente. </p>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h1 class="card-title">¿Quienes somos?</h1>
+                        <p class="card-text" style="text-align: justify; font-size: 20px;">Somos una empresa comprometidos con la innovación y calidad, ofrecemos productos originales y nutritivos con un toque japonés que nos identifica en cada uno de nuestras recetas.</p>
+                        <p class="card-text" style="text-align: justify; font-size: 20px;">Nuestro proyecto fue creado debido a la necesidad de satisfacer una gastronomia diferente.</p>
+                    </div>
                 </div>
             </div>
-
-            <div class="row row-cols-2">
-                <div class="col">
-                    <h1>Misión</h1>
-                    <div class="row row-cols-2">
-                        <div class="col">
-                            <img src="imagenes/mision.jpg" width="100%">
-                        </div>
-                        <div class="col">
-                            <p style="text-align: center; font-size: 20px;">Satisfacer las necesidades gastronómicas de todos nuestros clientes ofreciendo diferentes alternativas de comida asiática.</p>
-                        </div>
+        </div>
+        <div class="card mb-3" >
+            <div class="row g-0">
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h1 class="card-title">Misión</h1>
+                        <p class="card-text" style="text-align: justify; font-size: 20px;">Satisfacer las necesidades gastronómicas de todos nuestros clientes ofreciendo diferentes alternativas de comida asiática.</p>
                     </div>
                 </div>
-
-
-                <div class="col">
-                    <h1>Visión</h1>
-                    <div class="row row-cols-2">
-                        <div class="col">
-                            <img src="imagenes/vision.jpg" width="105%">
-                        </div>
-                        <div class="col">
-                            <p style="text-align: center; font-size: 20px;">Ser el restaurante más reconocido de Bucaramanga  en el 2025, por brindar un menú agradable acompañados de las mejores experiencias gastronómicas memorables.</p>
-                        </div>
+                <div class="col-md-4">
+                    <img src="imagenes/mision.jpg" class="img-fluid rounded-start" >
+                </div>
+            </div>
+        </div>
+        <div class="card mb-3" >
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="imagenes/vision.jpg" class="img-fluid rounded-start" >
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h1 class="card-title">Visión</h1>
+                        <p class="card-text" style="text-align: justify; font-size: 20px;">Ser el restaurante más reconocido de Bucaramanga  en el 2025, por brindar un menú agradable acompañados de las mejores experiencias gastronómicas memorables.</p>
                     </div>
                 </div>
-                </div>
-
-                <h1>Nuestros valores</h1>
-                <div class="row row-cols-2">
-                    <div class="col">
-                        <img src="imagenes/valores.png" width="80%">
-                    </div>
-                    <div class="col align-middle">
+            </div>
+        </div>
+        <div class="card mb-3" >
+            <div class="row g-0">
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h1 class="card-title">Nuestros valores</h1>
                         <p style="text-align: center; font-size: 20px;"><b>Calidad:</b> cuidando cada proceso de preparación logrando la excelencia del producto. </p>
                         <p style="text-align: center; font-size: 20px;"><b>Compromiso:</b> cumplir con las expectativas de nuestros clientes. </p>
                         <p style="text-align: center; font-size: 20px;"><b>Innovación:</b> buscamos la continuidad de nuevas ideas.</p>
-
                     </div>
                 </div>
-
+                <div class="col-md-4">
+                    <img src="imagenes/valores.png" class="img-fluid rounded-start" alt="Maquillaje">
+                </div>
+            </div>
         </div>
+    </div>
 
         <footer>
             contactos@ikiraroll.com.co 2021 <a href="IkiraSushiRoll.html" target="_blank"></a>
         </footer>
     </div>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
